--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-
+.imagetext {
+  font-family: impact;
+  color: #000000;
+  text-transform: uppercase;
+  background-image: url("daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+}
+.center {
+  text-align: center;
+}
